# MEMTO

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  solver.py  test.sh
data_factory/: data_loader.py
data_factory/SIM/: make_np_train.py
model/: Transformer.py  attn_layer.py  embedding.py  ours_memory_module.py
